--- a/Asaurus/Asaurus.vcxproj.filters
+++ b/Asaurus/Asaurus.vcxproj.filters
@@ -7,6 +7,9 @@
     <Filter Include="src\Asaurus">
       <UniqueIdentifier>{80B0E1AB-EC65-5AA1-755A-5478E10E51A5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Asaurus\Core">
+      <UniqueIdentifier>{D8247DFA-C41D-9C4C-ED4F-81D1D9A77B58}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Asaurus\Events">
       <UniqueIdentifier>{64CC7B93-50B0-3CE9-B910-373CA513276B}</UniqueIdentifier>
     </Filter>
@@ -16,8 +19,14 @@
     <Filter Include="src\Asaurus\Layer">
       <UniqueIdentifier>{4C0DBD4A-B823-BBE0-019B-46026DF08B68}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Asaurus\Renderer">
+      <UniqueIdentifier>{26849B58-1213-2522-BB31-391DA79F35C8}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Platform\OpenGL">
+      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
@@ -43,6 +52,9 @@
     <Filter Include="vendor\glm\glm\gtx">
       <UniqueIdentifier>{B3A6A76B-9F8A-68C1-08EB-6214F4ED5243}</UniqueIdentifier>
     </Filter>
+    <Filter Include="vendor\stb_image">
+      <UniqueIdentifier>{0DA0BA59-F998-D9AB-22CB-BE300E23B9B7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Asaurus.h">
@@ -53,6 +65,9 @@
     </ClInclude>
     <ClInclude Include="src\Asaurus\Core.h">
       <Filter>src\Asaurus</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Core\Timestep.h">
+      <Filter>src\Asaurus\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Asaurus\EntryPoint.h">
       <Filter>src\Asaurus</Filter>
@@ -90,8 +105,53 @@
     <ClInclude Include="src\Asaurus\MouseButtonCodes.h">
       <Filter>src\Asaurus</Filter>
     </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\Buffer.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\GraphicsContext.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\OrthoCamera.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\RenderCommand.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\Renderer.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\RendererAPI.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\Shader.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\Texture.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\VertexArray.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Asaurus\Window.h">
       <Filter>src\Asaurus</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
@@ -1326,20 +1386,9 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
-    <ClInclude Include="src\Asaurus\Renderer\GraphicsContext.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
-    <ClInclude Include="src\Asaurus\Renderer\Shader.h" />
-    <ClInclude Include="src\Asaurus\Renderer\Buffer.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
-    <ClInclude Include="src\Asaurus\Renderer\Renderer.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
-    <ClInclude Include="src\Asaurus\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
-    <ClInclude Include="src\Asaurus\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\Asaurus\Renderer\RenderCommand.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
-    <ClInclude Include="src\Asaurus\Renderer\OrthoCamera.h" />
-    <ClInclude Include="src\Asaurus\Core\Timestep.h" />
+    <ClInclude Include="vendor\stb_image\stb_image.h">
+      <Filter>vendor\stb_image</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Asaurus\Application.cpp">
@@ -1360,6 +1409,48 @@
     <ClCompile Include="src\Asaurus\Log.cpp">
       <Filter>src\Asaurus</Filter>
     </ClCompile>
+    <ClCompile Include="src\Asaurus\Renderer\Buffer.cpp">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Renderer\OrthoCamera.cpp">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Renderer\RenderCommand.cpp">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Renderer\Renderer.cpp">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Renderer\RendererAPI.cpp">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Renderer\Shader.cpp">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Renderer\Texture.cpp">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Renderer\VertexArray.cpp">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
@@ -1369,17 +1460,8 @@
     <ClCompile Include="src\aspch.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
-    <ClCompile Include="src\Asaurus\Renderer\Shader.cpp" />
-    <ClCompile Include="src\Asaurus\Renderer\Buffer.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
-    <ClCompile Include="src\Asaurus\Renderer\Renderer.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
-    <ClCompile Include="src\Asaurus\Renderer\VertexArray.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
-    <ClCompile Include="src\Asaurus\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\Asaurus\Renderer\RenderCommand.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
-    <ClCompile Include="src\Asaurus\Renderer\OrthoCamera.cpp" />
+    <ClCompile Include="vendor\stb_image\stb_image.cpp">
+      <Filter>vendor\stb_image</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
