--- a/Asaurus/Asaurus.vcxproj
+++ b/Asaurus/Asaurus.vcxproj
@@ -144,33 +144,33 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Asaurus\OrthographicCameraController.h" />
     <ClInclude Include="src\Asaurus.h" />
-    <ClInclude Include="src\Asaurus\Application.h" />
-    <ClInclude Include="src\Asaurus\Core.h" />
+    <ClInclude Include="src\Asaurus\Core\Application.h" />
+    <ClInclude Include="src\Asaurus\Core\Core.h" />
+    <ClInclude Include="src\Asaurus\Core\EntryPoint.h" />
+    <ClInclude Include="src\Asaurus\Core\Input.h" />
+    <ClInclude Include="src\Asaurus\Core\KeyCodes.h" />
+    <ClInclude Include="src\Asaurus\Core\Layer\Layer.h" />
+    <ClInclude Include="src\Asaurus\Core\Layer\LayerStack.h" />
+    <ClInclude Include="src\Asaurus\Core\Log.h" />
+    <ClInclude Include="src\Asaurus\Core\MouseButtonCodes.h" />
     <ClInclude Include="src\Asaurus\Core\Timestep.h" />
-    <ClInclude Include="src\Asaurus\EntryPoint.h" />
+    <ClInclude Include="src\Asaurus\Core\Window.h" />
     <ClInclude Include="src\Asaurus\Events\ApplicationEvent.h" />
     <ClInclude Include="src\Asaurus\Events\Event.h" />
     <ClInclude Include="src\Asaurus\Events\KeyEvent.h" />
     <ClInclude Include="src\Asaurus\Events\MouseEvent.h" />
     <ClInclude Include="src\Asaurus\ImGui\ImGuiLayer.h" />
-    <ClInclude Include="src\Asaurus\Input.h" />
-    <ClInclude Include="src\Asaurus\KeyCodes.h" />
-    <ClInclude Include="src\Asaurus\Layer\Layer.h" />
-    <ClInclude Include="src\Asaurus\Layer\LayerStack.h" />
-    <ClInclude Include="src\Asaurus\Log.h" />
-    <ClInclude Include="src\Asaurus\MouseButtonCodes.h" />
     <ClInclude Include="src\Asaurus\Renderer\Buffer.h" />
     <ClInclude Include="src\Asaurus\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Asaurus\Renderer\OrthoCamera.h" />
+    <ClInclude Include="src\Asaurus\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\Asaurus\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Asaurus\Renderer\Renderer.h" />
     <ClInclude Include="src\Asaurus\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Asaurus\Renderer\Shader.h" />
     <ClInclude Include="src\Asaurus\Renderer\Texture.h" />
     <ClInclude Include="src\Asaurus\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Asaurus\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
@@ -591,15 +591,15 @@
     <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Asaurus\OrthographicCameraController.cpp" />
-    <ClCompile Include="src\Asaurus\Application.cpp" />
+    <ClCompile Include="src\Asaurus\Core\Application.cpp" />
+    <ClCompile Include="src\Asaurus\Core\Layer\Layer.cpp" />
+    <ClCompile Include="src\Asaurus\Core\Layer\LayerStack.cpp" />
+    <ClCompile Include="src\Asaurus\Core\Log.cpp" />
     <ClCompile Include="src\Asaurus\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Asaurus\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="src\Asaurus\Layer\Layer.cpp" />
-    <ClCompile Include="src\Asaurus\Layer\LayerStack.cpp" />
-    <ClCompile Include="src\Asaurus\Log.cpp" />
     <ClCompile Include="src\Asaurus\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Asaurus\Renderer\OrthoCamera.cpp" />
+    <ClCompile Include="src\Asaurus\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Asaurus\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Asaurus\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Asaurus\Renderer\RendererAPI.cpp" />
