--- a/Asaurus/Asaurus.vcxproj.filters
+++ b/Asaurus/Asaurus.vcxproj.filters
@@ -10,14 +10,14 @@
     <Filter Include="src\Asaurus\Core">
       <UniqueIdentifier>{D8247DFA-C41D-9C4C-ED4F-81D1D9A77B58}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Asaurus\Core\Layer">
+      <UniqueIdentifier>{A46324BB-905D-4D0D-79CA-E31D6563B379}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Asaurus\Events">
       <UniqueIdentifier>{64CC7B93-50B0-3CE9-B910-373CA513276B}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Asaurus\ImGui">
       <UniqueIdentifier>{AA858C4A-169C-8AE0-5F13-1602CB685B68}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="src\Asaurus\Layer">
-      <UniqueIdentifier>{4C0DBD4A-B823-BBE0-019B-46026DF08B68}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Asaurus\Renderer">
       <UniqueIdentifier>{26849B58-1213-2522-BB31-391DA79F35C8}</UniqueIdentifier>
@@ -60,17 +60,38 @@
     <ClInclude Include="src\Asaurus.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\Asaurus\Application.h">
-      <Filter>src\Asaurus</Filter>
+    <ClInclude Include="src\Asaurus\Core\Application.h">
+      <Filter>src\Asaurus\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\Asaurus\Core.h">
-      <Filter>src\Asaurus</Filter>
+    <ClInclude Include="src\Asaurus\Core\Core.h">
+      <Filter>src\Asaurus\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Core\EntryPoint.h">
+      <Filter>src\Asaurus\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Core\Input.h">
+      <Filter>src\Asaurus\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Core\KeyCodes.h">
+      <Filter>src\Asaurus\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Core\Layer\Layer.h">
+      <Filter>src\Asaurus\Core\Layer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Core\Layer\LayerStack.h">
+      <Filter>src\Asaurus\Core\Layer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Core\Log.h">
+      <Filter>src\Asaurus\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Core\MouseButtonCodes.h">
+      <Filter>src\Asaurus\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Asaurus\Core\Timestep.h">
       <Filter>src\Asaurus\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\Asaurus\EntryPoint.h">
-      <Filter>src\Asaurus</Filter>
+    <ClInclude Include="src\Asaurus\Core\Window.h">
+      <Filter>src\Asaurus\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Asaurus\Events\ApplicationEvent.h">
       <Filter>src\Asaurus\Events</Filter>
@@ -87,24 +108,6 @@
     <ClInclude Include="src\Asaurus\ImGui\ImGuiLayer.h">
       <Filter>src\Asaurus\ImGui</Filter>
     </ClInclude>
-    <ClInclude Include="src\Asaurus\Input.h">
-      <Filter>src\Asaurus</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Asaurus\KeyCodes.h">
-      <Filter>src\Asaurus</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Asaurus\Layer\Layer.h">
-      <Filter>src\Asaurus\Layer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Asaurus\Layer\LayerStack.h">
-      <Filter>src\Asaurus\Layer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Asaurus\Log.h">
-      <Filter>src\Asaurus</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Asaurus\MouseButtonCodes.h">
-      <Filter>src\Asaurus</Filter>
-    </ClInclude>
     <ClInclude Include="src\Asaurus\Renderer\Buffer.h">
       <Filter>src\Asaurus\Renderer</Filter>
     </ClInclude>
@@ -112,6 +115,9 @@
       <Filter>src\Asaurus\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="src\Asaurus\Renderer\OrthoCamera.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\OrthographicCameraController.h">
       <Filter>src\Asaurus\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="src\Asaurus\Renderer\RenderCommand.h">
@@ -131,9 +137,6 @@
     </ClInclude>
     <ClInclude Include="src\Asaurus\Renderer\VertexArray.h">
       <Filter>src\Asaurus\Renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Asaurus\Window.h">
-      <Filter>src\Asaurus</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
       <Filter>src\Platform\OpenGL</Filter>
@@ -1389,13 +1392,19 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\Asaurus\OrthographicCameraController.h">
-      <Filter>src\Asaurus</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Asaurus\Application.cpp">
-      <Filter>src\Asaurus</Filter>
+    <ClCompile Include="src\Asaurus\Core\Application.cpp">
+      <Filter>src\Asaurus\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Core\Layer\Layer.cpp">
+      <Filter>src\Asaurus\Core\Layer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Core\Layer\LayerStack.cpp">
+      <Filter>src\Asaurus\Core\Layer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Core\Log.cpp">
+      <Filter>src\Asaurus\Core</Filter>
     </ClCompile>
     <ClCompile Include="src\Asaurus\ImGui\ImGuiBuild.cpp">
       <Filter>src\Asaurus\ImGui</Filter>
@@ -1403,19 +1412,13 @@
     <ClCompile Include="src\Asaurus\ImGui\ImGuiLayer.cpp">
       <Filter>src\Asaurus\ImGui</Filter>
     </ClCompile>
-    <ClCompile Include="src\Asaurus\Layer\Layer.cpp">
-      <Filter>src\Asaurus\Layer</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Asaurus\Layer\LayerStack.cpp">
-      <Filter>src\Asaurus\Layer</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Asaurus\Log.cpp">
-      <Filter>src\Asaurus</Filter>
-    </ClCompile>
     <ClCompile Include="src\Asaurus\Renderer\Buffer.cpp">
       <Filter>src\Asaurus\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\Asaurus\Renderer\OrthoCamera.cpp">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Renderer\OrthographicCameraController.cpp">
       <Filter>src\Asaurus\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\Asaurus\Renderer\RenderCommand.cpp">
@@ -1465,9 +1468,6 @@
     </ClCompile>
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Asaurus\OrthographicCameraController.cpp">
-      <Filter>src\Asaurus</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
